--- a/potability/android/app/build.gradle
+++ b/potability/android/app/build.gradle
@@ -20,7 +20,7 @@ android {
         applicationId = "com.alustuff.potability.potability"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk = 26
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
