--- a/potability/pubspec.yaml
+++ b/potability/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   lottie: ^3.1.2
   hidden_drawer_menu: ^3.0.1
   http: ^1.2.1
+  tflite_flutter: ^0.10.4
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/models/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
